--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-bg rounded-lg p-12 shadow dark:bg-gray-900 m-4">
+<footer class=" rounded-lg p-12 shadow dark:bg-gray-900 m-4">
   <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
     <div class="sm:flex sm:items-center sm:justify-between">
       <div class="flex flex-col items-center justify-center">
