small font change

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <app-slider [images]="images"></app-slider>
-<div class="flex px-4 md:px-16 lg:px-28">
-    <p class="text-main text-3xl md:text-4xl lg:text-5xl font-playfairDisplay">
+<div class="flex px-4 md:px-16 lg:px-28 mt-8">
+    <p class="text-main text-3xl md:text-4xl lg:text-5xl font-playfair">
       Super Delicious
     </p>
   </div>
