--- a/src/app/components/slider/slider.component.css
+++ b/src/app/components/slider/slider.component.css
@@ -90,8 +90,8 @@
 } */
 .slider-container {
   position: relative;
-  max-width: 800px; /* Adjust to your desired width */
-  margin: auto;
+  /*max-width: 1200px; /* Adjust to your desired width */
+  /*margin: auto;*/
   overflow: hidden;
 }
 
@@ -112,8 +112,8 @@
 }
 
 .slider-image {
-  width: 120%;
-  height: 400px; /* Set a fixed height */
+  width: 100%;
+  height: 450px; /* Set a fixed height */
   object-fit: cover; /* Ensure the image covers the full space */
 }
 
@@ -134,18 +134,13 @@
 }
 
 .slider-link {
-  font-size: 1rem;
-  color: white;
-  text-decoration: none;
-  border: 2px solid white;
   padding: 8px 15px;
   transition: background-color 0.3s ease, color 0.3s ease;
   display: inline-block;
 }
 
 .slider-link:hover {
-  background-color: white;
-  color: black;
+  color: white;
 }
 
 .slider-controls {
