--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,23 +1,27 @@
 <app-slider [images]="images"></app-slider>
-<div class="flex px-4 md:px-16 lg:px-28 mt-8">
-    <p class="text-main text-3xl md:text-4xl lg:text-5xl font-playfair">
-      Super Delicious
-    </p>
-  </div>
-  <div class="flex flex-wrap px-4 md:px-16 lg:px-20">
-    @for(mealPlan of Meals() ; track mealPlan){
-    <div class="w-full sm:w-1/2 md:w-1/3 flex justify-between p-2">
-        <app-meal-card
-            [title]="mealPlan.title"
-            [image]="mealPlan.image"
-            [comments]="mealPlan.comments"
-            [userImage]="mealPlan.userImage"
-            [username]="mealPlan.username"
-            [date]="mealPlan.date"
-        ></app-meal-card>
-    </div>
+<div class=" px-4 md:px-16 lg:px-28 mt-8">
+  <h2 class="text-main text-3xl md:text-4xl lg:text-5xl font-playfair">Popular Categories</h2>
+  <div class="flex items-center justify-center gap-6 overflow-x-auto scroll-smooth">
+    @for (category of categories; track $index) {
+      <app-category [category]="category"></app-category>
     }
+    <img src="arrow.png" alt="arrow" class="w-8 h-8">
   </div>
+</div>
+<div class="flex px-4 md:px-16 lg:px-28 mt-8">
+  <p class="text-main text-3xl md:text-4xl lg:text-5xl font-playfair">
+    Super Delicious
+  </p>
+</div>
+
+<div class="flex flex-wrap px-4 md:px-16 lg:px-20">
+  @for(mealPlan of Meals() ; track mealPlan){
+  <div class="w-full sm:w-1/2 md:w-1/3 flex justify-between p-2">
+    <app-meal-card [title]="mealPlan.title" [image]="mealPlan.image" [comments]="mealPlan.comments"
+      [userImage]="mealPlan.userImage" [username]="mealPlan.username" [date]="mealPlan.date"></app-meal-card>
+  </div>
+  }
+</div>
 <div class="flex px-4 md:px-16 lg:px-28">
   <p class="text-main text-3xl md:text-4xl lg:text-5xl font-playfair">
     Meal plans
@@ -26,11 +30,8 @@
 <div class="flex flex-wrap px-4 md:px-16 lg:px-20">
   @for(mealPlan of MealPlans() ; track mealPlan){
   <div class="w-full sm:w-1/2 md:w-1/3 flex justify-between p-2">
-    <app-meal-plan-card
-      [title]="mealPlan.title"
-      [image]="mealPlan.image"
-      [recipes]="mealPlan.recipes"
-    ></app-meal-plan-card>
+    <app-meal-plan-card [title]="mealPlan.title" [image]="mealPlan.image"
+      [recipes]="mealPlan.recipes"></app-meal-plan-card>
   </div>
   }
 </div>
