--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -109,4 +109,10 @@
     </div>
 
   </div>
+  <div class="favorites">
+
+    <app-product-list [items]="products" [showLoadMore]="showLoadMore" (loadMore)="handleLoadMore()">
+    </app-product-list>
+
+  </div>
 </div>
