--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -2,7 +2,7 @@
     <img
       [src]="category.image"
       [alt]="category.name"
-      class="w-32 h-32 rounded-full object-cover shadow-md mb-2"
+      class="h-44 w-44 rounded-full object-cover shadow-md mb-2"
     />
     <p class="text-lg ">{{ category.name }}</p>
   </div>
