--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -4,10 +4,10 @@
       <h1 class="text-3xl uppercase font-bold mb-8 font-playfair">Profile</h1>
     </div>
     <div class="save-delete flex flex-col  space-y-4">
-      <button class="px-4 py-1 text-white bg-main rounded-md hover:bg-second_main transition">
+      <button class="px-4 py-1 text-white bg-second_main hover:bg-darker_second_main rounded-md  transition">
         Save
       </button>
-      <button class="px-4 py-1 text-white bg-main rounded-md hover:bg-bg_fonce transition">
+      <button class="px-4 py-1 text-white bg-main rounded-md hover:bg-darker_main transition">
         Delete account
       </button>
     </div>
@@ -15,10 +15,10 @@
 
   <div class="flex items-center gap-5 mb-6">
     <img src="../../../assets/cat.png" alt="Profile Picture" class="w-20 h-20 rounded-full object-cover " />
-    <button class="px-4 py-1 bg-main text-white rounded-md hover:bg-amber-700 transition">
+    <button class="px-4 py-1 bg-main text-white rounded-md hover:bg-darker_main transition-ease-3s">
       Change picture
     </button>
-    <button class="px-4 py-1 bg-white text-gray-600 border border-gray-300 rounded-md hover:bg-gray-100 transition">
+    <button class="px-4 py-1  border border-gray-300 rounded-md hover:bg-light_red  transition">
       Delete
     </button>
   </div>
@@ -82,20 +82,22 @@
           <img src="../../../assets/favorite.png" class="w-8 h-8 mr-4 rounded-full object-cover" alt="">
           <h1 class="text-3xl  font-bold mb-8 font-playfair">Favorites</h1>
         </div>
-
-
         <div class="relative inline-block">
-          <button (click)="toggleDropdown()"
-            class="px-6 py-1 bg-amber-600 border-[1px] rounded-md hover:bg-amber-700 transition">
+          <button (click)="toggleDropdown($event)" class="px-6 py-1  border-[1px] rounded-md hover:bg-bg_fonce ;
+            ">
             Sort by
             <i class="fa-solid fa-arrow-down"></i>
           </button>
-
-          <div #dropdownMenu class="absolute hidden bg-white shadow-lg rounded-md mt-2 w-48">
-            <ul class="text-gray-800">
-              <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">Option 1</li>
-              <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">Option 2</li>
-              <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">Option 3</li>
+          <div #dropdownMenu
+            class="absolute dropdown bg-bg border-[1px] border-gray hidden shadow-lg rounded-md mt-2 w-48"
+            [class.hidden]="!isDropdownOpen">
+            <ul class="py-[4px] text-gray-800 w-full">
+              <li class=" dropdown-element w-full cursor-pointer">
+                <div *ngFor="let category of categories"
+                  class="w-full element px-5 hover:bg-bg_fonce py-2 cursor-pointer">
+                  {{ category }}
+                </div>
+              </li>
             </ul>
           </div>
         </div>
