--- a/src/app/recipe/recipe-footer/recipe-footer.component.html
+++ b/src/app/recipe/recipe-footer/recipe-footer.component.html
@@ -1,6 +1,6 @@
 <div class="p-8 mx-[10%]">
     <div class="footer">
-        <h2 class="text-main">Already made this?</h2>
+        <h2 class="text-main text-6xl font-playfair font-bold my-8">Already made this?</h2>
     </div>
     <button class="feedback-button">Share your feedback</button>
     <hr />
