--- a/src/app/recipe/recipe-content/recipe-content.component.html
+++ b/src/app/recipe/recipe-content/recipe-content.component.html
@@ -61,19 +61,19 @@
         <h2>Fresh Recipes</h2>
         <ul>
           <li>
-            <img src="path-to-apple-pie.jpg" alt="Apple Pie" />
+            <img src="../../../assets/recipe/apple_pie.jpg" alt="Apple Pie" />
             <p>Apple Pie ★★★★★</p>
           </li>
           <li>
-            <img src="path-to-birthday-cake.jpg" alt="Birthday Cake" />
+            <img src="../../../assets/recipe/cake.jpg" alt="Birthday Cake" />
             <p>Birthday Cake ★★★★★</p>
           </li>
           <li>
-            <img src="path-to-tomato-pasta.jpg" alt="Tomato Pasta" />
+            <img src="../../../assets/recipe/tomato_pasta.jpg" alt="Tomato Pasta" />
             <p>Tomato Pasta ★★★★★</p>
           </li>
           <li>
-            <img src="path-to-fresh-salad.jpg" alt="Fresh Salad" />
+            <img src="../../../assets/recipe/fresh_salad.webp" alt="Fresh Salad" />
             <p>Fresh Salad ★★★★★</p>
           </li>
         </ul>
