--- a/src/app/recipe/recipe-suggestions/recipe-suggestions.component.html
+++ b/src/app/recipe/recipe-suggestions/recipe-suggestions.component.html
@@ -3,35 +3,35 @@
     <h2 class="text-main">You might also like</h2>
     <div class="suggestions-grid">
         <div class="suggestion-item">
-        <img src="recipe1.jpg" alt="Recipe 1" />
+        <img src="../../../assets/recipe/fresh_salad.webp" alt="Recipe 1" />
         <p>Recipe Title 1</p>
         </div>
         <div class="suggestion-item">
-        <img src="recipe2.jpg" alt="Recipe 2" />
+        <img src="../../../assets/recipe/fresh_salad.webp" alt="Recipe 2" />
         <p>Recipe Title 2</p>
         </div>
         <div class="suggestion-item">
-        <img src="recipe3.jpg" alt="Recipe 3" />
+        <img src="../../../assets/recipe/fresh_salad.webp" alt="Recipe 3" />
         <p>Recipe Title 3</p>
         </div>
         <div class="suggestion-item">
-        <img src="recipe4.jpg" alt="Recipe 4" />
+        <img src="../../../assets/recipe/fresh_salad.webp" alt="Recipe 4" />
         <p>Recipe Title 4</p>
         </div>
         <div class="suggestion-item">
-        <img src="recipe5.jpg" alt="Recipe 5" />
+        <img src="../../../assets/recipe/fresh_salad.webp" alt="Recipe 5" />
         <p>Recipe Title 5</p>
         </div>
         <div class="suggestion-item">
-        <img src="recipe6.jpg" alt="Recipe 6" />
+        <img src="../../../assets/recipe/fresh_salad.webp" alt="Recipe 6" />
         <p>Recipe Title 6</p>
         </div>
         <div class="suggestion-item">
-        <img src="recipe7.jpg" alt="Recipe 7" />
+        <img src="../../../assets/recipe/fresh_salad.webp" alt="Recipe 7" />
         <p>Recipe Title 7</p>
         </div>
         <div class="suggestion-item">
-        <img src="recipe8.jpg" alt="Recipe 8" />
+        <img src="../../../assets/recipe/fresh_salad.webp" alt="Recipe 8" />
         <p>Recipe Title 8</p>
         </div>
     </div>
