--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,9 +3,11 @@
   <h2 class="text-main text-3xl md:text-4xl lg:text-5xl font-playfair">Popular Categories</h2>
   <div class="flex items-center justify-center gap-6 overflow-x-auto scroll-smooth">
     @for (category of categories; track $index) {
-      <app-category [category]="category"></app-category>
+    <app-category [category]="category"></app-category>
     }
-    <img src="arrow.png" alt="arrow" class="w-8 h-8">
+    <a [routerLink]="['categories']">
+      <img src="arrow.png" alt="arrow" class="w-8 h-8">
+    </a>
   </div>
 </div>
 <div class="flex px-4 md:px-16 lg:px-28 mt-8">
@@ -27,7 +29,7 @@
     Meal plans
   </p>
 </div>
-<div class="flex flex-wrap px-4 md:px-16 lg:px-20">
+<div class="flex flex-wrap px-4 md:px-16 lg:px-20" appLazyLoad (lazyLoad)="lazyLoadMealPlans()">
   @for(mealPlan of MealPlans() ; track mealPlan){
   <div class="w-full sm:w-1/2 md:w-1/3 flex justify-between p-2">
     <app-meal-plan-card [title]="mealPlan.title" [image]="mealPlan.image"
