--- a/src/app/recipe/recipe-content/recipe-content.component.css
+++ b/src/app/recipe/recipe-content/recipe-content.component.css
@@ -1,11 +1,96 @@
+/* Recipe Header Styles */
+.recipe-header {
+  font-family: 'Arial', sans-serif;
+  padding: 20px;
+  border-bottom: 1px solid #ddd;
+}
+
+.recipe-header .rating {
+  font-size: 14px;
+  margin-bottom: 10px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  
+  color: #6A9C89;
+}
+
+.recipe-header .recipe-title {
+  font-weight: bold;
+  margin: 10px 0;
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 600;
+  line-height: 85px;
+
+}
+
+.recipe-header .metadata {
+  display: flex;
+  font-size: 14px;
+  color: #444;
+  justify-content: space-between;
+}
+
+.metadata .author {
+  display: flex;
+  align-items: center;
+}
+
+.author .author-image {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.metadata .date {
+  color: #888; /* Grey color for the date */
+  display: flex;
+  align-items: center;
+}
+
+.metadata .comments {
+  display: flex;
+  align-items: center;
+}
+
+.metadata .comments .icon-comments {
+  width: 16px;
+  height: 16px;
+  margin-right: 5px;
+  background-size: contain;
+}
+
+.metadata .stars {
+  display: flex;
+  align-items: center;
+}
+
+.metadata .stars .icon-star {
+  width: 16px;
+  height: 16px;
+  margin-right: 2px;
+  background-size: contain;
+}
+
+/* Optional: Add hover effects for interactivity */
+.metadata .comments:hover,
+.metadata .stars:hover {
+  color: #000;
+}
+
+
 /* Recipe Content Section */
 .recipe-content {
     display: flex;
     justify-content: space-between;
     gap: 20px;
     padding: 20px;
-    font-family: 'Arial', sans-serif;
-    color: #444;
   }
   
   /* Recipe Details */
