--- a/src/app/recipe/recipe-content/recipe-content.component.html
+++ b/src/app/recipe/recipe-content/recipe-content.component.html
@@ -1,83 +1,144 @@
-<div class="recipe-content">
-    <!-- Recipe Details -->
-    <div class="recipe-details">
-      <p><strong>Prep time:</strong> 30 min</p>
-      <p><strong>Cook time:</strong> 15 min</p>
-      <p><strong>Servings:</strong> 4 people</p>
+<div class="p-8 mx-[10%]">
+  <div class="recipe-header">
+    <div class="rating">
+      <img src="../../../assets/recipe/arrow-up.svg" />
+      85% would do this again
     </div>
-  
-    <!-- Main Content -->
-    <div class="recipe-main">
-      <!-- Ingredients Section -->
-      <div class="ingredients">
-        <h2>Ingredients</h2>
+    <h1 class="recipe-title text-main text-5xl text-center">
+      {{ recipe?.name }}
+    </h1>
+
+    <!-- Recipe Details -->
+    <div class="grid justify-items-center">
+      <img
+        src="{{ recipe?.image }}"
+        alt="{{ recipe?.name }}"
+        class="h-auto max-w-full rounded-lg"
+      />
+    </div>
+  </div>
+
+  <div class="grid grid-cols-2 gap-5 font-inter text-lg">
+    <div class="">
+      <div class="grid grid-cols-3 gap-4">
+        <div class="">
+          <p class="text-second_main font-bold text-lg">Prep time</p>
+          <p class="text-base">{{ recipe?.prepTime }} min</p>
+        </div>
+        <div class="">
+          <p class="text-second_main font-bold text-lg">Cook time</p>
+          <p class="text-base">{{ recipe?.cookTime }}min</p>
+        </div>
+        <div class="">
+          <p class="text-second_main font-bold text-lg">Servings</p>
+          <p class="text-base">{{ recipe?.servings }} people</p>
+        </div>
+      </div>
+      <div class="py-5">
+        <h2 class="font-playfair text-main font-semibold text-4xl py-3">
+          Ingredients
+        </h2>
         <ul>
-          <li><strong>For the crust</strong></li>
-          <li>400g graham crackers</li>
-          <li>150g unsalted butter, melted</li>
-          <li><strong>For the cheesecake</strong></li>
-          <li>300g marshmallow</li>
-          <li>175g unsalted butter, melted</li>
-          <li>500g Philadelphia cream cheese, softened</li>
-          <li>250ml thickened/whipping cream, warm</li>
-          <li>3 tbsp powdered gelatin + 3 tbsp water</li>
-          <li>5 drops purple food gel</li>
-          <li>3 drops blue food gel</li>
+          @for(ingred of recipe?.ingredients; track $index){
+          <li>• {{ ingred }}</li>
+          }
         </ul>
       </div>
-  
-      <!-- Instructions Section -->
-      <div class="instructions">
-        <h2>Instructions</h2>
+      <div class="py-5">
+        <h2 class="font-playfair text-main font-semibold text-4xl py-3">
+          Instructions
+        </h2>
         <ol>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Duis interdum maximus massa eu pellentesque.</li>
-          <li>Fusce bibendum at mauris at laoreet.</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Duis interdum maximus massa eu pellentesque.</li>
-          <li>Fusce bibendum at mauris at laoreet.</li>
+          @for(instruction of recipe?.instructions; track $index){
+          <li>• {{ instruction }}</li>
+          }
         </ol>
       </div>
     </div>
-  
     <!-- Sidebar -->
-    <div class="recipe-sidebar">
-      <!-- Nutrition Facts -->
-      <div class="nutrition-facts">
-        <h2>Nutrition Facts</h2>
-        <ul>
-          <li><strong>Calories:</strong> 216</li>
-          <li><strong>Total Fat:</strong> 216</li>
-          <li><strong>Saturated Fat:</strong> 216</li>
-          <li><strong>Cholesterol:</strong> 216</li>
-          <li><strong>Sugars:</strong> 216</li>
-          <li><strong>Protein:</strong> 216</li>
-          <li><strong>Total Carbohydrate:</strong> 216</li>
-        </ul>
+    <div>
+      <div
+        class="w-full max-w-sm  bg-light_green rounded-lg shadow justify-items-center font-inter text-sm text-gris"
+      >
+        <!-- Nutrition Facts -->
+        <div class="flex-col justify-between font-inter p-8">
+          <h2 class="font-playfair text-main font-semibold text-4xl py-3">
+            Nutrition Facts
+          </h2>
+          <ul>
+            <li class="flex justify-between">
+              <p class="">Calories</p>
+              <p>{{ recipe?.nutritionFacts?.calories }}</p>
+            </li>
+            <div class="h-px bg-main w-full my-2"></div>
+            <li class="flex justify-between">
+              <p>Total Fat</p>
+              {{ recipe?.nutritionFacts?.fat }}
+            </li>
+            <div class="h-px bg-main w-full my-2"></div>
+
+            <li class="flex justify-between">
+              <p>Saturated Fat</p>
+              {{ recipe?.nutritionFacts?.saturatedFat }}
+            </li>
+            <div class="h-px bg-main w-full my-2"></div>
+
+            <li class="flex justify-between">
+              <p>Cholesterol</p>
+              {{ recipe?.nutritionFacts?.cholesterol }}
+            </li>
+            <div class="h-px bg-main w-full my-2"></div>
+
+            <li class="flex justify-between">
+              <p>Sugars</p>
+              {{ recipe?.nutritionFacts?.sugar }}
+            </li>
+            <div class="h-px bg-main w-full my-2"></div>
+
+            <li class="flex justify-between">
+              <p>Protein</p>
+              {{ recipe?.nutritionFacts?.protein }}
+            </li>
+            <div class="h-px bg-main w-full my-2"></div>
+
+            <li class="flex justify-between">
+              <p>Total Carbohydrate</p>
+              {{ recipe?.nutritionFacts?.carbohydrates }}
+            </li>
+            <div class="h-px bg-main w-full my-2"></div>
+          </ul>
+        </div>
       </div>
-  
       <!-- Fresh Recipes -->
-      <div class="fresh-recipes">
-        <h2>Fresh Recipes</h2>
-        <ul>
-          <li>
-            <img src="../../../assets/recipe/apple_pie.jpg" alt="Apple Pie" />
-            <p>Apple Pie ★★★★★</p>
+      <div class="flex-col justify-between font-inter p-8">
+        <h2 class="font-playfair text-main font-semibold text-4xl py-3" >Fresh Recipes</h2>
+        <ul class="grid grid-cols-2 gap-4">
+          <li class="grid grid-cols-2 gap-4">
+            <img class="w-32 h-32 object-cover"src="../../../assets/recipe/apple_pie.jpg" alt="Apple Pie"/>
+            <p>Apple Pie <br>★★★★★</p>
           </li>
-          <li>
-            <img src="../../../assets/recipe/cake.jpg" alt="Birthday Cake" />
-            <p>Birthday Cake ★★★★★</p>
+          <li class="grid grid-cols-2 gap-4">
+            <img class="w-32 h-32 object-cover"src="../../../assets/recipe/cake.jpg" alt="Birthday Cake" />
+            <p>Birthday Cake <br>★★★★★</p>
           </li>
-          <li>
-            <img src="../../../assets/recipe/tomato_pasta.jpg" alt="Tomato Pasta" />
-            <p>Tomato Pasta ★★★★★</p>
+          <li class="grid grid-cols-2 gap-4">
+            <img
+            class="w-32 h-32 object-cover"
+              src="../../../assets/recipe/tomato_pasta.jpg"
+              alt="Tomato Pasta"
+            />
+            <p>Tomato Pasta <br>★★★★★</p>
           </li>
-          <li>
-            <img src="../../../assets/recipe/fresh_salad.webp" alt="Fresh Salad" />
+          <li class="grid grid-cols-2 gap-4">
+            <img
+            class="w-32 h-32 object-cover"
+              src="../../../assets/recipe/fresh_salad.webp"
+              alt="Fresh Salad"
+            />
             <p>Fresh Salad ★★★★★</p>
           </li>
         </ul>
       </div>
     </div>
   </div>
-  
+</div>
