--- a/src/app/recipe/recipe-comments/recipe-comments.component.html
+++ b/src/app/recipe/recipe-comments/recipe-comments.component.html
@@ -1,22 +1,29 @@
 <div class="p-8 mx-[10%]">
   <h2 class="text-main text-6xl font-playfair font-bold">Comments</h2>
 
-  <section class="bg-white dark:bg-gray-900 py-8 lg:py-16 antialiased justify-start ">
+  <section
+    class="bg-white dark:bg-gray-900 py-8 lg:py-16 antialiased justify-start"
+  >
     <div class="">
       <div class="flex justify-between items-center mb-6">
         <h2 class="text-lg lg:text-2xl font-bold text-gray-900 dark:text-white">
           Discussion {{ comments.length }}
         </h2>
       </div>
-      <form class="mb-6" [formGroup]="form" >
+
+      @for(comment of comments ; track $index) {
+      <app-comment [comment]="comment" />
+      }
+      <form class="mb-6" [formGroup]="form">
         <div
-          class="py-2 px-4 mb-4 bg-white rounded-lg rounded-t-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
+          class="py-2 px-4 mb-4 bg-light_green rounded-lg rounded-t-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
         >
           <label for="comment" class="sr-only">Your comment</label>
           <textarea
             id="comment"
+            #comment
             rows="6"
-            class="px-0 w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none dark:text-white dark:placeholder-gray-400 dark:bg-gray-800"
+            class="px-0 w-full text-sm text-gray-900 bg-light_green border-0 focus:ring-0 focus:outline-none dark:text-white dark:placeholder-gray-400 dark:bg-gray-800"
             placeholder="Write a comment..."
             required
             formControlName="comment"
@@ -30,9 +37,6 @@
           Post comment
         </button>
       </form>
-      @for(comment of comments ; track $index) {
-        <app-comment [comment]="comment"/>
-      }   
     </div>
   </section>
 </div>
