--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,10 +2,10 @@
 <div class=" px-4 md:px-16 lg:px-28 mt-8">
   <h2 class="text-main text-3xl md:text-4xl lg:text-5xl font-playfair">Popular Categories</h2>
   <div class="flex items-center justify-center gap-6 overflow-x-auto scroll-smooth">
-    @for (category of categories; track $index) {
+    @for (category of visibleCategories; track $index) {
     <app-category [category]="category"></app-category>
     }
-    <a [routerLink]="['categories']">
+    <a (click)="rotateCategories()">
       <img src="arrow.png" alt="arrow" class="w-8 h-8">
     </a>
   </div>
