--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -1,10 +1,14 @@
 .results-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
 .load-more-button {
-    color : #6A9C89;
-  }
-  
+  color: #6A9C89;
+}
+
+.loading-container {
+  transform: scale(0.3);
+  margin-top: -6%;
+}
