--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,7 +7,7 @@
                         <a href="#" class="block py-2 pr-4 pl-3 font-playfair text-lg text-main lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0">Recipes</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 font-playfair text-lg text-main lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0">Meal Plans</a>
+                        <a href="/planner" class="block py-2 pr-4 pl-3 font-playfair text-lg text-main lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0">Meal Plans</a>
                     </li>
                     <li>
                         <a href="#" class="block py-2 pr-4 pl-3 font-playfair text-lg text-main lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0">About Us</a>
