--- a/src/app/components/meal-plan-card/meal-plan-card.component.html
+++ b/src/app/components/meal-plan-card/meal-plan-card.component.html
@@ -2,18 +2,26 @@
   class="max-w-xs m-4 bg-light_green border border-second_main rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
 >
   <div class="flex justify-center">
-    <img
-      class="rounded-t-lg h-48 w-80  object-cover"
-      src="{{ image }}"
-      alt=""
-    />
+    <img class="rounded-t-lg h-48 w-80 object-cover" src="{{ image }}" alt="" />
   </div>
   <div class="p-4">
-    <h5
-      class="mb-2 text-lg font-playfair font-bold tracking-tight text-gray-900 dark:text-white"
+    <div
+      class="title-container"
+      style="height: 3rem; display: flex; align-items: center"
     >
-      {{ title }}
-    </h5>
+      <h5
+        class="mb-2 text-lg font-playfair font-bold tracking-tight text-gray-900 dark:text-white"
+        style="
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 2; /* Nombre de lignes visibles */
+          overflow: hidden;
+          text-overflow: ellipsis;
+        "
+      >
+        {{ title }}
+      </h5>
+    </div>
 
     <div class="flex justify-end items-center px-2 py-1">
       <a href="">
