recipe cards in homepage lazyloaded

--- a/src/app/components/meal-card/meal-card.component.html
+++ b/src/app/components/meal-card/meal-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="max-w-xs m-4 bg-light_green border border-second_main rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+  class="h-96 max-w-xs m-4 bg-light_green border border-second_main rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
 >
   <div class="flex-col justify-center">
     <img class="rounded-t-lg h-48 w-80 object-cover" src="{{ image }}" alt="" />
@@ -68,15 +68,15 @@
   </div>
   <div class="flex flex-row justify-start items-center px-2">
     <img
-      class="w-10 h-10 rounded-full shadow-lg"
-      src="{{ userImage }}"
+      class="w-7 h-7 rounded-full shadow-lg"
+      src="time.png"
       alt="Bonnie image"
     />
     <h5 class="px-3 text-l font-inter text-gray-900 dark:text-white">
-      {{ username }}
+      {{ time }} minutes
     </h5>
   </div>
-  <div class="flex flex-row justify-end items-center p-3 ">
+  <!-- <div class="flex flex-row justify-end items-center p-3 ">
     <div class="flex flex-row items-center">
       <img class="w-5 h-5 rounded-full shadow-lg" src="calendar.png" />
       <h5 class="px-1 text-m font-inter text-gray-900 dark:text-white">
@@ -89,5 +89,5 @@
         {{ comments }}
       </h5>
     </div>
-  </div>
+  </div> -->
 </div>
