refactor: replace ProductList component with RecipeGrid and clean up related files feat: recipeGrid now have 2 options for the layouts pagination (for search results)  or showMore for home page section. feat: pass vegan property to MealCard with icon.

--- a/src/app/pages/test-search/test-search.component.html
+++ b/src/app/pages/test-search/test-search.component.html
@@ -1,5 +1,1 @@
-<app-product-list
-[items]="products"
-[showLoadMore]="showLoadMore"
-(loadMore)="handleLoadMore()">
-</app-product-list>
+<app-recipe-grid displayMode="pagination"></app-recipe-grid>
