--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,13 +16,10 @@
   </p>
 </div>
 
-<div class="flex flex-wrap px-4 md:px-16 lg:px-20" appLazyLoad (lazyLoad)="lazyLoadRandomRecipes(6)">
-  @for(meal of Meals() ; track meal){
-  <div class="w-full sm:w-1/2 md:w-1/3 flex justify-between p-2" >
-    <app-meal-card [title]="meal.name" [image]="meal.image" [time]="meal.cookTime"></app-meal-card>
-  </div>
-  }
+<div class="flex flex-wrap px-4 md:px-16 lg:px-20">
+  <app-recipe-grid displayMode="showMore"></app-recipe-grid>
 </div>
+
 <div class="flex px-4 md:px-16 lg:px-28">
   <p class="text-main text-3xl md:text-4xl lg:text-5xl font-playfair">
     Meal plans
