--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,21 +10,21 @@
         >
           <li>
             <a
-              href="#"
+            [routerLink]="[routes.test]"
               class="block py-2 pr-4 pl-3 font-playfair text-lg text-main lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0"
               >Recipes</a
             >
           </li>
           <li>
             <a
-              href="/planner"
+              [routerLink]="[routes.mealplan]"
               class="block py-2 pr-4 pl-3 font-playfair text-lg text-main lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0"
               >Meal Plans</a
             >
           </li>
           <li>
             <a
-              href="/categories"
+            [routerLink]="[routes.categories]"
               class="block py-2 pr-4 pl-3 font-playfair text-lg text-main lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0"
               >Categories</a
             >
@@ -41,12 +41,35 @@
 
       <div class="flex items-center">
         <img src="search.png" class="w-6 h-6 mr-4 mt-4" alt="Search Icon" />
-        <button
+        @if(authoService.isLoggedIn()) {
+          <div class="flex items-center mt-4">
+            <!-- User Avatar -->
+             <a [routerLink]="[routes.profile]">
+            <div class="w-10 h-10 rounded-full overflow-hidden border-2 border-gray-300 mr-4">
+              <img
+                src="profiles/6.jpg" 
+                alt="User Avatar" 
+                class="w-full h-full object-cover"
+              />
+            </div>
+          </a>
+            <!-- Logout Button -->
+            <button
+              class="border px-2 rounded-lg lg:px-5 lg:py-2 font-playfair text-lg text-main font-bold mat-raised-button"
+              (click)="logout()"
+            >
+              Logout
+            </button>
+          </div>
+        }
+        @else {
+          <button
           class="border px-2 rounded-lg mt-4 lg:px-5 lg:py-2 mr-2 font-playfair text-lg text-main font-bold mat-raised-button"
           (click)="openLoginDialog()"
         >
           Login
         </button>
+        }
         <button
           data-collapse-toggle="mobile-menu-2"
           type="button"
