recipe links work

--- a/src/app/components/meal-card/meal-card.component.html
+++ b/src/app/components/meal-card/meal-card.component.html
@@ -1,3 +1,4 @@
+<a [routerLink]="['/recipe',id]">
 <div
   class="h-80 max-w-xs m-4 bg-light_green border border-second_main rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
 >
@@ -60,3 +61,4 @@
     </div>
   </div> -->
 </div>
+</a>
