--- a/src/app/pages/profile/profile/profile.component.html
+++ b/src/app/pages/profile/profile/profile.component.html
@@ -20,40 +20,27 @@
       Change picture
     </button>
     <input type="file" #fileInput accept="image/*" (change)="onFileSelected($event)" class="hidden" />
-
-    <!-- <button class="px-4 py-1 border border-gray-300 rounded-md hover:bg-light_red  transition">
-      Delete
-    </button> -->
   </div>
 
   <div class="form w-[80%]">
-    <form [formGroup]="profileForm" (ngSubmit)="saveProfile()" class=" flex flex-wrap font-inter ml-[-10px]">
+    <form (ngSubmit)="saveProfile()" class=" flex flex-wrap font-inter ml-[-10px]">
       <div class="m-4 w-[40%]">
         <label for="name" class="uppercase font-light text-gray block text-sm mb-1">Full Name</label>
         <div class="flex items-center border-b border-gray py-2">
           <i class="fas fa-user text-amber-600 mr-2"></i>
-          <input type="text" id="name" class="w-full outline-none " placeholder="Saboua Abd" formControlName="name"
+          <input type="text" id="name" class="w-full outline-none " placeholder="enter your name"       [(ngModel)]="profileForm.name"
+
             name="name" />
         </div>
-        <div *ngIf="profileForm.get('name')?.invalid && profileForm.get('name')?.touched" class="text-sm">
-          <small *ngIf="profileForm.get('name')?.hasError('required')">Full Name is required.</small>
-          <small *ngIf="profileForm.get('name')?.hasError('minlength')">Full Name must be at least 3
-            characters.</small>
-        </div>
-
       </div>
 
       <div class="m-4 w-[40%]">
         <label for="surname" class="block text-sm uppercase font-light text-gray mb-1">Surname</label>
         <div class="flex items-center border-b border-gray-300 py-2">
           <i class="fa-regular fa-user mr-2"></i>
-          <input type="text" id="surname" class="w-full outline-none text-gray-700" placeholder="Miller"
-            formControlName="surname" name="surname" />
-        </div>
-        <div *ngIf="profileForm.get('surname')?.invalid && profileForm.get('surname')?.touched" class="text-sm">
-          <small *ngIf="profileForm.get('surname')?.hasError('required')">Username is required.</small>
-          <small *ngIf="profileForm.get('surname')?.hasError('minlength')">Username must be at least 3
-            characters.</small>
+          <input type="text" id="surname" class="w-full outline-none text-gray-700" placeholder="enter your surname"
+          [(ngModel)]="profileForm.surname"
+          name="surname" />
         </div>
       </div>
 
@@ -61,31 +48,28 @@
         <label for="email" class="block text-sm uppercase font-light text-gray mb-1">Email</label>
         <div class="flex items-center border-b border-gray-300 py-2">
           <i class="fa-regular fa-envelope mr-2"></i>
-          <input type="email" id="email" class="w-full outline-none text-gray-700" placeholder="enter your email here"
-            formControlName="email" name="email" />
-        </div>
-        <div *ngIf="profileForm.get('email')?.invalid && profileForm.get('email')?.touched" class="text-sm">
-          <small *ngIf="profileForm.get('email')?.hasError('required')">Email is required.</small>
-          <small *ngIf="profileForm.get('email')?.hasError('email')">Enter a valid email address.</small>
+          <input type="email" id="email" class="w-full outline-none text-gray-700" placeholder="enter your email"
+          [(ngModel)]="profileForm.email"
+          name="email" />
         </div>
       </div>
 
       <div class="m-4  w-[40%]">
-        <label for="password" class="block text-sm uppercase font-light text-gray mb-1">Password</label>
-        <div class="flex items-center border-b border-gray-300 py-2">
-          <i class="fa-solid fa-lock mr-2"></i>
-          <input type="password" id="password" class="w-full outline-none text-gray-700" placeholder="********"
-            formControlName="password" name="password" />
-        </div>
-        <div *ngIf="profileForm.get('password')?.invalid && profileForm.get('password')?.touched" class="text-sm">
-          <small *ngIf="profileForm.get('password')?.hasError('required')">Password is required.</small>
-          <small *ngIf="profileForm.get('password')?.hasError('minlength')">Password must be at least 6
-            characters.</small>
-        </div>
+        <label for="password" class="block text-sm uppercase font-light text-gray mb-1">New Password</label>
+
+        <span class="flex flex-row">
+          <div class="flex items-center border-b border-gray-300 py-2 mr-2">
+            <i class="fa-solid fa-lock mr-2"></i>
+            <input type="password" id="password" class="w-full outline-none text-gray-700" placeholder="********"
+            [(ngModel)]="profileForm.password"
+            name="password" />
+          </div>
+          <button (click)="changePassword()" class="change-password">change </button>
+        </span>
       </div>
 
       <div class="flex justify-between">
-        <button type="submit" [disabled]="profileForm.invalid"
+        <button type="submit"
           class="px-6 py-2 bg-amber-600 text-white rounded-md hover:bg-amber-700 transition">
           Save
         </button>
@@ -127,7 +111,7 @@
   </div>
 
   <div class="favorites">
-    <!-- <app-recipe-grid [items]="products" [showLoadMore]="showLoadMore" (loadMore)="handleLoadMore()">
-    </app-recipe-grid> -->
+    <app-recipe-grid [recipesInput]="favouriteRecipies" (loadMore)="handleLoadMore()">
+    </app-recipe-grid>
   </div>
 </div>
