--- a/src/app/pages/profile/profile/profile.component.html
+++ b/src/app/pages/profile/profile/profile.component.html
@@ -28,7 +28,7 @@
         <label for="name" class="uppercase font-light text-gray block text-sm mb-1">Full Name</label>
         <div class="flex items-center border-b border-gray py-2">
           <i class="fas fa-user text-amber-600 mr-2"></i>
-          <input type="text" id="name" class="w-full outline-none " placeholder="enter your name"       [(ngModel)]="profileForm.name"
+          <input type="text" id="name" class="w-full outline-none " placeholder="Enter your name"       [(ngModel)]="profileForm.name"
 
             name="name" />
         </div>
@@ -38,7 +38,7 @@
         <label for="surname" class="block text-sm uppercase font-light text-gray mb-1">Surname</label>
         <div class="flex items-center border-b border-gray-300 py-2">
           <i class="fa-regular fa-user mr-2"></i>
-          <input type="text" id="surname" class="w-full outline-none text-gray-700" placeholder="enter your surname"
+          <input type="text" id="surname" class="w-full outline-none text-gray-700" placeholder="Enter your surname"
           [(ngModel)]="profileForm.surname"
           name="surname" />
         </div>
@@ -48,7 +48,7 @@
         <label for="email" class="block text-sm uppercase font-light text-gray mb-1">Email</label>
         <div class="flex items-center border-b border-gray-300 py-2">
           <i class="fa-regular fa-envelope mr-2"></i>
-          <input type="email" id="email" class="w-full outline-none text-gray-700" placeholder="enter your email"
+          <input type="email" id="email" class="w-full outline-none text-gray-700" placeholder="Enter your email"
           [(ngModel)]="profileForm.email"
           name="email" />
         </div>
