category not complete+on click meal plan

--- a/src/app/pages/meal-plan-result/meal-plan-result.component.html
+++ b/src/app/pages/meal-plan-result/meal-plan-result.component.html
@@ -59,6 +59,7 @@
             'https://img.spoonacular.com/recipes/' + meal.id + '-556x370.jpg'
           "
           [recipes]="'ready in ' + meal.readyInMinutes"
+          (click)="onClick(meal.id)"
         ></app-meal-plan-card>
       </div>
       } }
