change profile picture dynamically

--- a/src/app/pages/profile/profile/profile.component.html
+++ b/src/app/pages/profile/profile/profile.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="flex items-center gap-5 mb-6">
-    <img [src]="profilePictureUrl || '../../../assets/cat.png'" alt="Profile Picture"
+    <img [src]="profilePictureUrl" alt="Profile Picture"
       class="w-20 h-20 rounded-full object-cover" />
     <button (click)="fileInput.click()"
       class="px-4 py-1 bg-main text-white rounded-md hover:bg-darker_main transition-ease-3s">
