change profile picture dynamically in header

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -40,7 +40,7 @@
              <a [routerLink]="[routes.profile]">
             <div class="w-10 h-10 rounded-full overflow-hidden border-2 border-gray-300 mr-4">
               <img
-                src="profiles/6.jpg" 
+              [src]="profilePictureUrl" 
                 alt="User Avatar" 
                 class="w-full h-full object-cover"
               />
