implement search results page and update routing; remove test search component; add recipeApiUrl to env file.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="flex items-center">
-        <img src="search.png" class="w-6 h-6 mr-4 mt-4" alt="Search Icon" />
+        <app-search></app-search>
         @if(authoService.isLoggedIn()) {
           <div class="flex items-center mt-4">
             <!-- User Avatar -->
