--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -3,6 +3,7 @@
       [src]="category.image"
       [alt]="category.name"
       class="h-44 w-44 rounded-full object-cover shadow-md mb-2"
+      (click)="onClick(category.name)"
     />
     <p class="text-lg ">{{ category.name }}</p>
   </div>
