bug : fix the display of favorite items in profile page.

--- a/src/app/pages/profile/profile/profile.component.html
+++ b/src/app/pages/profile/profile/profile.component.html
@@ -186,10 +186,9 @@
 
 
   <div class="favorites">
-    @if(favouriteRecipies.length >0){
+    @if(favouriteRecipies.length > 0  &&  favouriteRecipies.length === favorites.length) {
     <app-recipe-grid
       [recipesInput]="favouriteRecipies"
-      (loadMore)="handleLoadMore()"
     >
     </app-recipe-grid
     >}
